--- a/src/css/theme/default.css
+++ b/src/css/theme/default.css
@@ -28,7 +28,7 @@
     background: #ffffff !important;
     border: 1px solid #EBEBEB !important;
     border-radius: 2px !important;
-    margin-bottom: 8px !important;
+    /* margin-bottom: 8px !important; */
     display: block !important;
     width: 100% !important;
 }
